--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.6",
-    "typescript": "~2.2.1"
+    "typescript": "^2.2.2"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
