--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^1.3.7",
-    "@ionic/cli-plugin-ionic-angular": "1.3.2",
+    "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "ionic": "3.7.0",
     "typescript": "^2.2.2"
   },
   "cordovaPlugins": [
