working feed provider with list on explore page

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -7,5 +7,6 @@
       "proxyUrl": "http://localhost:8080/api"
     }
   ],
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "integrations": {}
 }
