--- a/package.json
+++ b/package.json
@@ -1,56 +1,63 @@
 {
-  "name": "edumate",
-  "version": "0.0.1",
-  "author": "Rodrigo Mantica",
-  "homepage": "http://manticarodrigo.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.6.0",
-    "ionicons": "3.0.0",
-    "rxjs": "5.4.0",
-    "socket.io-client": "^1.7.3",
-    "sw-toolbox": "3.6.0",
-    "typescript": "2.2.1",
-    "zone.js": "^0.8.12"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "^2.1.3",
-    "ionic": "3.8.0",
-    "typescript": "^2.3.4"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-console",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
+    "name": "edumate",
+    "version": "0.0.1",
+    "author": "Rodrigo Mantica",
+    "homepage": "http://manticarodrigo.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@angular/common": "4.1.3",
+        "@angular/compiler": "4.1.3",
+        "@angular/compiler-cli": "4.1.3",
+        "@angular/core": "4.1.3",
+        "@angular/forms": "4.1.3",
+        "@angular/http": "4.1.3",
+        "@angular/platform-browser": "4.1.3",
+        "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/core": "3.12.1",
+        "@ionic-native/in-app-browser": "^4.1.0",
+        "@ionic-native/splash-screen": "3.12.1",
+        "@ionic-native/status-bar": "3.12.1",
+        "@ionic/storage": "2.0.1",
+        "cordova-plugin-inappbrowser": "^1.7.1",
+        "ionic-angular": "3.6.0",
+        "ionicons": "3.0.0",
+        "rxjs": "5.4.0",
+        "socket.io-client": "^1.7.3",
+        "sw-toolbox": "3.6.0",
+        "typescript": "2.2.1",
+        "zone.js": "^0.8.12"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "^2.1.3",
+        "ionic": "3.8.1",
+        "typescript": "^2.3.4"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen",
+        "ionic-plugin-keyboard"
+    ],
+    "cordovaPlatforms": [
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        }
+    ],
+    "description": "A learning management app for the social era.",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-inappbrowser": {}
+        }
     }
-  ],
-  "description": "A learning management app for the social era."
 }
