--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
+        "@angular/animations": "4.1.3",
         "@angular/common": "4.1.3",
         "@angular/compiler": "4.1.3",
         "@angular/compiler-cli": "4.1.3",
@@ -26,17 +27,16 @@
         "@ionic/storage": "2.0.1",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "ionic-angular": "3.6.0",
+        "ionic-tooltips": "^1.0.0",
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "socket.io-client": "^1.7.3",
         "sw-toolbox": "3.6.0",
-        "typescript": "2.2.1",
         "zone.js": "^0.8.12"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "^2.1.3",
-        "ionic": "3.8.1",
-        "typescript": "^2.3.4"
+        "@ionic/app-scripts": "2.1.3",
+        "typescript": "2.3.4"
     },
     "cordovaPlugins": [
         "cordova-plugin-whitelist",
