--- a/package.json
+++ b/package.json
@@ -24,13 +24,21 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "ionic-angular": "3.6.0",
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "socket.io-client": "^1.7.3",
         "sw-toolbox": "3.6.0",
-        "zone.js": "^0.8.12"
+        "zone.js": "^0.8.12",
+        "cordova-android": "~6.1.2",
+        "cordova-plugin-console": "1.0.5",
+        "cordova-plugin-device": "1.1.4",
+        "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-statusbar": "2.2.1",
+        "cordova-plugin-whitelist": "1.3.1",
+        "ionic-plugin-keyboard": "~2.2.1"
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
@@ -55,7 +63,17 @@
     "description": "A learning management app for the social era.",
     "cordova": {
         "plugins": {
-            "cordova-plugin-inappbrowser": {}
-        }
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "android",
+            "ios"
+        ]
     }
 }
